Updated RocksJava Performance on Flash Storage (markdown)